# vexa

./: .gitignore  Makefile  RESEARCH_GUIDE.md  agent_core.py  database.py  pyproject.toml  robot.py
research/: Makefile  README.md  pyproject.toml
research/autonomous_mapping/: auto_explorer.py  goto_goal.py  http_server.py  index.html  occupancy_map.py  path_planner.py  server.py  websocket_server.py
research/autonomous_mapping/maps/: corridor.json  goto_goal_map_1774302392.json  goto_goal_map_1774302409.json  large_room.json  maze.json  room_with_obstacles.json  simple_room.json
research/slam_visualization/: lidar_ws_server.py  start_server.py
scripts/: lidar_reader.py  lidar_ws_server.py  requirements.txt  start_server.py
static/: index.html
templates/: lidar_slam.html
